EFM first update

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,10 @@
-title: Montreal Quaker Meeting
-title-fr: Assemblée Quaker de Montréal
-keywords: quaker, montreal, quebec, friends, religious, society, religion, meditation 
-short_title: Montreal Quakers
-short_title-fr: Quakers de Montréal
+title: Evanston Friends Meeting
+keywords: quaker, Evanston, Illinois, friends, religious, society, religion, meditation 
+short_title: Evanston Quakers
 email: 
-address: 1090 Greene Ave., Westmount
-adresse: 1090 ave. Greene, Westmount
-phone: (514) 307-0820
-myurl: https://montreal.quaker.ca
+address: 1010 Greenleaf Street, Evanston, IL 60202
+phone: (847) 864-8511
+myurl: https://www.evanstonquakers.org/
 # myurl: localhost:4000
 
 # This sets the point at which the website will switch from "desktop view" to "mobile/tablet view"
@@ -25,12 +22,8 @@ media_pages:
     media: youtube/yt_embed.html
   - page_trans: directions
     media: maps/street_directions.html
-  - page_trans: laurentians
-    media: maps/street_atelier.html
   - page_trans: midweek
     media: maps/street_ryan.html
-  - page_trans: quebec
-    media: maps/street_vieux_qc.html
   - page_trans: calendar
     media: calendar.html
     media2: calendar2.html
@@ -50,9 +43,8 @@ redalert_fr-text: alert/fr-covid.md
 redalert_pages:
   - page_trans: index
   - page_trans: directions
-  - page_trans: quebec
 
-greenalerts: some
+greenalerts: off
 greenalert_en-text: alert/en-midweek_over.md
 greenalert_fr-text: alert/fr-midweek_over.md
 greenalert_pages:
